feat: Add Developer Experience Improvement Plan, Progress Report, and Roadmap documents
- Introduced DX Improvement Plan outlining current state, critical gaps, and recommendations for Axiom framework.
- Created Progress Report detailing completion status of core features and testing utilities.
- Established Roadmap for upcoming phases, including logging integration, testing utilities, and persistence layer.
- Drafted RFC-0011 for Axiom Persistence & Transaction System, emphasizing user-friendly persistence styles.
- Drafted RFC-0012 for Logging Integration using SLF4J, detailing motivation, design principles, and user experience.